02-kubernetes-basics-part-3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-crud
  labels:
    app: crud
    component: api
    release: otus
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: crud
      component: api
      release: otus
  template:
    metadata:
      name: crud-pod
      labels:
        app: crud
        component: api
        release: otus
    spec:
      containers:
      - image: "drsklifnsk/otus-sa:crud-app-v12"
        name: crud-api
        ports:
        - containerPort: 8000
          name: api
          protocol: TCP
        livenessProbe:
          httpGet:
            port: api
            path: /
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: api
            path: /health/
          initialDelaySeconds: 5
          periodSeconds: 5
