02-kubernetes-basics-part-3/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-crud
  labels:
    app: crud
    component: api
    release: otus
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: api
  selector:
    app: crud
    component: api
    release: otus
