02-kubernetes-basics-part-3/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otus-crud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/ildyakov-aleksandr($|/)(.*)
        backend:
          serviceName: otus-crud
          servicePort: 8000
